--- a/тестовое задание/index.html
+++ b/тестовое задание/index.html
@@ -32,25 +32,30 @@
             </div>
             <div class="profile__block__info">
                 <div class="info__main">
-                    <div class="main__name">
+                    <div class="main__name info__value">
                         Виталя Гора
                     </div>
-                    <div class="main__city">
+                    <input type="text" class="input input__name">
+                    <div class="main__city info__value">
                         г. Нижние Шахты
                     </div>
+                    <input type="text" class="input input__city">
                 </div>
                 <div class="info__data">
                     <div class="clearfix data__mairied data__row">
                         <div class="data__label">Семейное положение</div>
-                        <div class="data__labeled">холост</div>
+                        <div class="data__labeled info__value">холост</div>
+                        <input type="text" class="input input__maried">
                     </div>
                     <div class="clearfix data__phone data__row">
                         <div class="data__label">Телефон</div>
-                        <div class="data__labeled">+7 (440) 554-32-12</div>
+                        <div class="data__labeled info__value">+7 (440) 554-32-12</div>
+                        <input type="text" class="input input__phone">
                     </div>
                     <div class="clearfix data__mail data__row">
                         <div class="data__label">E-mail</div>
-                        <div class="data__labeled"><a href="#">vitalya@gora.ru</a></div>
+                        <div class="data__labeled info__value"><a href="#">vitalya@gora.ru</a></div>
+                        <input type="text" class="input input__mail">
                     </div>
                 </div>
                 <div class="info__interests">
